# remind-me-again

./: .gitignore  CHANGELOG.md  README.md  bindings.ts  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
assets/: Logo.afdesign  gh-social-preview.afphoto
src/: App.svelte  app.css  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  data.rs  main.rs  notifications.rs
src/lib/: Edit.svelte  Item.svelte  New.svelte  Switch.svelte  commands.ts  helpers.ts  types.ts
