[package]
name = "remind-me-again"
version = "1.2.0"
description = "Toggleable reminders app for Mac, Linux and Windows"
default-run = "remind-me-again"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "time"] }
chrono = "0.4"
tauri = { version = "1.2", features = ["devtools", "dialog-message", "macos-private-api", "notification-all", "shell-open", "system-tray", "window-hide"] }
async-cron-scheduler = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
nanoid = "0.4"
atomicwrites = "0.4"
tauri-specta = { version = "1.0", features = ["javascript", "typescript"] }
specta = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-app-nap = "0.0"
cocoa = "0.24"
objc = "0.2"
# mac-notification-sys = "0.5"
mac-notification-sys = { git = "https://github.com/probablykasper/mac-notification-sys", rev = "43a2fbf9c4ef8717f7736a99c456e21725ab274d" }
rust-macios = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
